# Hitchhikers-Guide-To-Your-Local-File-System

./: README.md  ThinkingThroughTheThing.txt  app.py  gui.py  pyproject.toml
