[project]
name = "hitchhikers-guide-to-your-local-file-system"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "chromadb>=1.0.15",
    "customtkinter>=5.2.2",
    "einops>=0.8.1",
    "libmagic>=1.0",
    "pandas>=2.3.1",
    "pillow>=11.3.0",
    "requests>=2.32.4",
    "sentence-transformers>=5.0.0",
    "unstructured[all-docs]>=0.18.9",
]
